minor fixes to spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -413,6 +413,7 @@ ul {
 
 section {
 	padding-bottom: 50px;
+	padding-top: 50px;
 	overflow: hidden;
 }
 
